--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 body{
     font-family: sans-serif;
 }
+
+.statBox {
+  border: 1px solid;
+  margin-left: auto;
+  transition: 0.3s;
+  width: 20%;
+  margin-bottom: 1%;
+}
+
+.center {
+  margin: auto;
+  width: 75%;
+  border: 1px solid;
+  text-align:center;
+  padding: 10px;
+}
