--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ body {
   margin-top: 20px;
 }
 
-
 /* Stats in top-right */
 #stats {
   position: absolute;
@@ -171,4 +170,8 @@ body {
 #volumeSlider {
   width: 100%;
   margin-top: 5px;
+}
+
+#jobListDiv {
+  display: none;
 }
